# campeonato_brasileiro

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
campeonato_brasileiro/: asgi.py  settings.py  urls.py  wsgi.py
clubs/: models.py
clubs/management/commands/: seed_brasileirao.py
clubs/migrations/: 0001_initial.py  0002_alter_leaguedivision_name.py  0002_leaguedivision.py  0003_alter_team_name.py  0003_remove_team_city_remove_team_short_name.py  0004_alter_leaguedivision_id_alter_team_id.py  0005_alter_team_league_division_delete_leaguedivision.py
clubs/tests/: factories.py  test_league_division_model.py  test_team_model.py  test_team_season_constraint.py
core/: models.py
leagues/: models.py
leagues/migrations/: 0001_initial.py  0002_alter_leagueseason_id.py  0003_leaguedivision.py
leagues/tests/: factories.py  test_league_division_model.py  test_league_season_model.py
matches/: models.py
matches/migrations/: 0001_initial.py  0002_match_away_points_match_home_points.py
matches/services/: __init__.py  fixture_generator.py
matches/tests/: factories.py  test_fixture_generator.py  test_match_model.py
